--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,13 +5,14 @@ homepage: https://github.com/Skyost/RateMyApp
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=3.0.0"
+  flutter: ">=3.13.0"
 
 dependencies:
-  shared_preferences: '>=2.0.0 <3.0.0'
+  shared_preferences: ^2.3.0
   flutter_rating_bar: '>=4.0.0 <5.0.0'
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_lints: ^2.0.1
