--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    namespace 'com.example.rate_my_app'
+    namespace 'fr.skyost.rate_my_app'  // Fixed namespace to match group
     compileSdkVersion 31
 
     sourceSets {
